--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -41,11 +41,18 @@ colors:
 mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
 
-mouse:
-  url:
-    launcher:
-      program: firefox
-    modifiers: None
+hints:
+  enabled:
+   - regex: "(mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
+             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+     command: xdg-open
+     post_processing: true
+     mouse:
+       enabled: true
+       mods: None
+     binding:
+       key: U
+       mods: Control|Shift
 
 selection:
   save_to_clipboard: true
